welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:6: error: not found: value n1
      nbOccurrences = nbOccurrences +n1 
                                     ^